@@ -135,8 +135,8 @@
   author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois and JJ
                   Allaire and Kevin Ushey and Qiang Kou and
                   Nathan Russel and John Chambers and Douglas Bates},
-  year =	 2023,
-  note =	 {R package version 1.0.11},
+  year =	 2024,
+  note =	 {R package version 1.0.12},
   url =		 CRAN # "package=Rcpp"
 }
 
